<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favoritos"
            android:icon="@drawable/ic_favoritos_24dp"
            android:title="@string/favoritos" />
        <item
            android:id="@+id/nav_conta"
            android:icon="@drawable/ic_conta_24dp"
            android:title="@string/conta" />
        <item
            android:id="@+id/nav_sair"
            android:icon="@drawable/ic_sair_24dp"
            android:title="@string/sair" />
    </group>

    <item android:title="Comunicação">
        <menu>
            <item
                android:id="@+id/nav_ajuda"
                android:icon="@drawable/ic_help_outline_black_24dp"
                android:title="@string/ajuda" />
            <item
                android:id="@+id/nav_compartilhar"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/compartilhar" />
        </menu>
    </item>

</menu>
